--- a/angular/lab1/src/app/home/home.component.scss
+++ b/angular/lab1/src/app/home/home.component.scss
@@ -1,6 +1,17 @@
-.test{
+.test {
   border: 1px solid;
   padding: 10px;
   box-shadow: 5px 10px red;
   width: 400px;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  text-align: center;
+}
+
+.so-am{
+  color:  red;
 }
