--- a/angular/lab1/src/app/app.component.html
+++ b/angular/lab1/src/app/app.component.html
@@ -1,2 +1,10 @@
 <h2>Thằng rank con này</h2>
-<app-home></app-home>
+<nav>
+  <ul>
+    <li><a routerLink="/about" routerLinkActive="active" > About-component</a></li>
+    <li><a routerLink="/home" routerLinkActive="active">Home-component</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
+<!-- Liên kết giữa các router -->
+
