--- a/angular/lab1/src/app/home/home.component.html
+++ b/angular/lab1/src/app/home/home.component.html
@@ -41,7 +41,7 @@
       </td>
       <td>
         <!-- <span *ngIf="i.haGia">Đang hạ giá</span> -->
-        <span >{{i.haGia | onsale|uppercase}}</span>
+        <span>{{i.haGia | onsale|uppercase}}</span>
       </td>
     </tr>
   </table>
@@ -60,4 +60,6 @@
       {{ district }}
     </option>
   </select>
+  <span> Counter={{counter}}</span> <br>
+  <span>Counter ^2 ={{counterBinhPhuong}}</span>
 </div>
