--- a/angular/lab1/src/app/app.component.html
+++ b/angular/lab1/src/app/app.component.html
@@ -3,6 +3,7 @@
   <ul>
     <li><a routerLink="/about" routerLinkActive="active" > About-component</a></li>
     <li><a routerLink="/home" routerLinkActive="active">Home-component</a></li>
+    <li><a routerLink="/templateform" routerLinkActive="active">templateform</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
