--- a/angular/lab1/src/app/app.component.html
+++ b/angular/lab1/src/app/app.component.html
@@ -1,11 +1,14 @@
 <h2>Thằng rank con này</h2>
 <nav>
   <ul>
-    <li><a routerLink="/about" routerLinkActive="active" > About-component</a></li>
+    <li><a routerLink="/about" routerLinkActive="active"> About-component</a></li>
     <li><a routerLink="/home" routerLinkActive="active">Home-component</a></li>
-    <li><a routerLink="/templateform" routerLinkActive="active">templateform</a></li>
+    <li><a routerLink="/templateform" routerLinkActive="active">Templateform</a></li>
+    <li><a routerLink="/reactiveform" routerLinkActive="active">Reactiveform</a></li>
+    <li><a routerLink="/getdata" routerLinkActive="active">Getdata</a></li>
+    <li><a href="" routerLink="/postdata" routerLinkActive="active">Post data</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
 <!-- Liên kết giữa các router -->
-
+<app-cha></app-cha>
